--- a/app/src/main/res/layout/fragment_about_weather.xml
+++ b/app/src/main/res/layout/fragment_about_weather.xml
@@ -1,18 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/padding">
-    <TextView
-        android:id="@+id/text_view_city_name"
+    android:orientation="vertical">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycle_fragment_item"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="@dimen/city_size_text"
-        android:text="@string/city_name"/>
-    <include
-        android:id="@+id/linear_layout_cell"
-        layout="@layout/layout_cell"/>
-</LinearLayout>
+        android:layout_height="match_parent"/>
+</FrameLayout>
