--- a/app/src/main/res/layout-port/activity_main.xml
+++ b/app/src/main/res/layout-port/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="MissingDefaultResource">
-        <fragment android:name="ru.alexey.weather.fragments.FragmentSearchAndPreferences"
+        <fragment android:name="ru.alexey.weather.Fragments.FragmentSearchAndPreferences"
             android:id="@+id/fragment_search"
             android:layout_height="match_parent"
             android:layout_width="match_parent"/>
