--- a/app/src/main/res/layout/fragment_search_and_preferences.xml
+++ b/app/src/main/res/layout/fragment_search_and_preferences.xml
@@ -1,61 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/padding">
-    <TextView
-        android:id="@+id/weather"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/label"/>
-    <EditText
-        android:id="@+id/edit_text"
+    android:layout_height="match_parent">
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        tools:ignore="Autofill,LabelFor,UnusedAttribute" />
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/show_wind"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/show_wind"
-        android:textOn="@string/true_on"
-        android:textOff="@string/false_off"/>
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/show_humidity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/show_humidity"
-        android:textOn="@string/true_on"
-        android:textOff="@string/false_off"/>
-    <android.support.v7.widget.SwitchCompat
-        android:id="@+id/show_pressure"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/show_pressure"
-        android:textOn="@string/true_on"
-        android:textOff="@string/false_off"/>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
-        <Button
-            android:id="@+id/button_search"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:padding="@dimen/padding">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardViewMoscow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="@dimen/padding"
+                card_view:cardElevation="@dimen/padding">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/image_height"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/moscow"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/padding"
+                    android:text="@string/moscow"
+                    android:gravity="bottom"
+                    android:textColor="@color/cardview_light_background"/>
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardViewSaintPeterburg"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                card_view:cardCornerRadius="@dimen/padding"
+                card_view:cardElevation="@dimen/padding">
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/image_height"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/sankt_peterburg"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="@dimen/padding"
+                    android:text="@string/saint_petersburg"
+                    android:gravity="bottom"
+                    android:textColor="@color/cardview_light_background"/>
+            </android.support.v7.widget.CardView>
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/show_wind"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/btn_search"
-            android:layout_gravity="center_horizontal"
-            tools:ignore="ButtonStyle" />
+            android:text="@string/show_wind"
+            android:textOn="@string/true_on"
+            android:textOff="@string/false_off"/>
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/show_humidity"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/show_humidity"
+            android:textOn="@string/true_on"
+            android:textOff="@string/false_off"/>
+        <android.support.v7.widget.SwitchCompat
+            android:id="@+id/show_pressure"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/show_pressure"
+            android:textOn="@string/true_on"
+            android:textOff="@string/false_off"/>
         <Button
             android:id="@+id/button_about_program"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="About App"
+            android:text="@string/about_app"
             android:layout_gravity="center_horizontal"
             tools:ignore="ButtonStyle" />
-    </LinearLayout>
-</LinearLayout>
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+</android.support.design.widget.CoordinatorLayout>
