--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="city_size_text">28sp</dimen>
     <dimen name="padding">10dp</dimen>
     <dimen name="dp">1dp</dimen>
+    <dimen name="image_height">50dp</dimen>
 </resources>
