--- a/app/src/main/res/values/my_style.xml
+++ b/app/src/main/res/values/my_style.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="MyStyle" parent="AppTheme">
+    <style name="MyStyle" parent="@style/Theme.AppCompat.Light.NoActionBar">
         <item name="android:textSize">16sp</item>
         <item name="colorAccent">#FFEB3B</item>
     </style>
