--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,14 +11,13 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay">
-            <!-- Добавляем в tool bar элементы -->
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
             <ImageView
                 android:src="@android:drawable/ic_popup_reminder"
                 android:layout_width="wrap_content"
@@ -44,4 +43,4 @@
         android:layout_width="@dimen/dp"
         android:layout_height="match_parent"
         android:layout_weight="5"/>
-</android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
