--- a/app/src/main/res/layout-port/activity_main_inner.xml
+++ b/app/src/main/res/layout-port/activity_main_inner.xml
@@ -19,7 +19,7 @@
             app:popupTheme="@style/AppTheme.PopupOverlay">
         </android.support.v7.widget.Toolbar>
     </android.support.design.widget.AppBarLayout>
-    <fragment android:name="ru.alexey.weather.Fragments.FragmentSearchAndPreferences"
+    <fragment android:name="ru.alexey.weather.Fragments.FragmentSearch"
         android:id="@+id/fragment_search"
         android:layout_height="match_parent"
         android:layout_width="match_parent"/>
