--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,5 @@
     <dimen name="padding">10dp</dimen>
     <dimen name="dp">1dp</dimen>
     <dimen name="image_height">50dp</dimen>
+    <dimen name="nav_header_height">150dp</dimen>
 </resources>
